Added option to ResultExtension to enable it for bulk crafting.